[package]
name = "playaround"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }

my_proc_macro = {path = "/Users/asitharodrigo/Library/CloudStorage/OneDrive-AsithaRodrigo/Coding/Learning Rust/rust_autogpt/playaround/my_proc_macro"}

